compiler/testData/diagnostics/tests/sealed/NeverFinal.kt
<!FINAL_MODIFIER_IN_SEALED!>final<!> sealed class Base {

}